<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardVisualEffects"
    style="@style/Widget.App.CardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvVisualEffectsTitle"
        style="@style/Widget.App.CardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual_effects"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnEffectGlow"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_visual_effect_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/effect_glow"
        android:textColor="@color/color_main"
        android:textSize="18sp"
        app:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintEnd_toStartOf="@+id/btnEffectBlink"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisualEffectsTitle" />

    <TextView
        android:id="@+id/btnEffectBlink"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_visual_effect_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/effect_blink"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintEnd_toStartOf="@+id/btnEffectNeon"
        app:layout_constraintStart_toEndOf="@+id/btnEffectGlow"
        app:layout_constraintTop_toTopOf="@+id/btnEffectGlow" />

    <TextView
        android:id="@+id/btnEffectNeon"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_visual_effect_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/effect_neon"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEffectBlink"
        app:layout_constraintTop_toTopOf="@+id/btnEffectGlow" />

    <TextView
        android:id="@+id/btnEffectFade"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_visual_effect_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/effect_fade"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnEffectGlow"
        app:layout_constraintStart_toStartOf="@+id/btnEffectGlow"
        app:layout_constraintTop_toBottomOf="@+id/btnEffectGlow" />

</androidx.constraintlayout.widget.ConstraintLayout>