<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bg_premium_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size25">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnClose"
                android:layout_width="@dimen/size44"
                android:layout_height="@dimen/size44"
                android:layout_marginStart="@dimen/size15"
                android:layout_marginTop="@dimen/size40"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size20"
                android:includeFontPadding="false"
                android:text="@string/unlock_vip_access"
                android:textAllCaps="true"
                android:textColor="@color/purple"
                android:textSize="@dimen/size24"
                app:fontFamily="@font/suwannaphum_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btnClose"
                app:layout_constraintTop_toBottomOf="@+id/btnClose" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size15"
                android:layout_marginTop="@dimen/size5"
                android:gravity="center"
                android:text="@string/unlock_vip_access_message"
                android:textColor="@color/white"
                android:textSize="@dimen/size14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size15"
                android:layout_marginTop="@dimen/size15"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                app:layout_constraintTop_toBottomOf="@+id/mcvVipBenefits" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvVipBenefits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size15"
                android:layout_marginTop="@dimen/size10"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/size16"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:strokeColor="#D9CEFF"
                app:strokeWidth="1dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/blurView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#801F1F1F" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvVipBenefits"
                    android:layout_width="match_parent"
                    android:paddingVertical="@dimen/size5"
                    android:clipToPadding="false"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVipAccess"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size44"
                android:layout_marginHorizontal="@dimen/size15"
                android:layout_marginTop="@dimen/size20"
                android:background="@drawable/background_purchase_button_selector"
                android:includeFontPadding="false"
                android:text="@string/get_vip_access"
                android:textAllCaps="false"
                android:textColor="@color/text_black"
                android:textSize="@dimen/size16"
                app:fontFamily="@font/google_sans_medium"
                app:layout_constraintTop_toBottomOf="@+id/rcvPurchase" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvDot"
                android:layout_width="@dimen/size5"
                android:layout_height="@dimen/size5"
                android:layout_marginTop="@dimen/size20"
                app:cardCornerRadius="@dimen/size5"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnVipAccess" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTermOfUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size15"
                android:text="@string/term_of_use"
                android:textColor="@color/gray4"
                android:textSize="@dimen/size13"
                app:layout_constraintBottom_toBottomOf="@+id/mcvDot"
                app:layout_constraintEnd_toStartOf="@+id/mcvDot"
                app:layout_constraintTop_toTopOf="@+id/mcvDot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size15"
                android:text="@string/privacy_policy"
                android:textColor="@color/gray4"
                android:textSize="@dimen/size13"
                app:layout_constraintBottom_toBottomOf="@+id/mcvDot"
                app:layout_constraintStart_toEndOf="@+id/mcvDot"
                app:layout_constraintTop_toTopOf="@+id/mcvDot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size15"
                android:layout_marginTop="@dimen/size15"
                android:gravity="center"
                android:text="@string/cancel_anytime"
                android:textColor="@color/gray4"
                android:textSize="@dimen/size13"
                app:layout_constraintTop_toBottomOf="@+id/mcvDot" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>